--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,10 +1,11 @@
-html,
-body {
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 a {
@@ -12,6 +13,7 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+li,
+ul {
+  list-style: none;
 }
