회원 이미지 첨부 기능 구현 #1

--- a/backend/tos-proejct/src/main/resources/templates/uploadTestForm.html
+++ b/backend/tos-proejct/src/main/resources/templates/uploadTestForm.html
@@ -7,7 +7,7 @@
     <form method="POST" enctype="multipart/form-data" action="/user/upload">
         <table>
             <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
+            <tr><td></td><td><input type="submit" value="upload" /></td></tr>
         </table>
     </form>
 </div>
