--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "NanumBarunGothic";
 }
 
 html {
@@ -19,5 +20,5 @@ ul {
 }
 
 body {
-  padding-top: 80px;
+  margin-top: 80px;
 }
