--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "NanumBarunGothic";
+  font-family: "NanumBarunGothic", sans-serif;
 }
 
 html {
