bugFix : 사용자 온 오프라인 css 수정

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -5,6 +5,18 @@
   font-family: "NanumBarunGothic", sans-serif;
 }
 
+@font-face {
+  font-family: "NanumBarunGothic";
+  font-style: normal;
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix")
+      format("embedded-opentype"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff")
+      format("woff"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf")
+      format("truetype");
+}
+
 html {
   font-size: 62.5%;
 }
