--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,7 +2,19 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "NanumBarunGothic", sans-serif;
+}
+
+@font-face {
   font-family: "NanumBarunGothic";
+  font-style: normal;
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix")
+      format("embedded-opentype"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff")
+      format("woff"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf")
+      format("truetype");
 }
 
 html {
